# stick-protocol

./: .gitignore  LICENSE  README.md  ios_installation.md
FormalVerification/VerifpalModels/: 02_sticky_session.vp  04_backward_secrecy.vp  05_malicious.vp  malicious.vp
Scientific Background/VerifPal Models/: group.vp  malicious.vp  pairwise.vp  re-establish.vp
ScientificBackground/VerifpalModels/: backward_secrecy.vp  group.vp  pairwise.vp  pairwise_session.vp  re-establish.vp  sticky_session.vp
android/: build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle
android/gradle/wrapper/: gradle-wrapper.properties
client-handlers/: StickProtocolHandlers.js  package.json  tsconfig.json
client-handlers/src/: Keys.d.ts  StickProtocolHandlers.ts
ios/StickProtocol/: Podfile  StickProtocol.podspec  StickProtocolLib.podspec
ios/StickProtocol/DatabaseSetup/: DatabaseSetup.h  DatabaseSetup.m
server/: README.rst  setup.cfg  setup.py
server/stick_protocol/: __init__.py  admin.py  apps.py  models.py  stick_protocol.py  tests.py  views.py
server/stick_protocol/migrations/: 0001_initial.py  0001_migrations.py  0002_auto_20210604_1545.py  0003_party_timestamp.py  0004_auto_20210625_1528.py  0005_party_timestamp.py  0006_auto_20210625_1532.py  0007_auto_20210625_1554.py  0008_auto_20210630_1314.py  0009_auto_20210703_1413.py  0010_auto_20210711_1851.py  0011_auto_20210717_1937.py  0012_auto_20220917_1802.py  0013_auto_20220917_1815.py  __init__.py
server/stick_protocol_server.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+147 files in other folders)
