[metadata]
name = stick-protocol-server
version = 1.1.57
description = Stick protocol server for Django.
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Omar Basem
author_email = founder@stiiick.com
license = GPLv3
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
include_package_data = true
packages = find: